log
Thu May 12 15:11:09 UTC 2022: 
 tests:  0|5
total_score: 0/70
83d52f7
Thu May 12 15:18:55 UTC 2022: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  2|4
total_score: 15/70
e1502bd
Thu May 12 15:48:28 UTC 2022: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|0
bc57f6c
Thu May 12 15:50:09 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c57ad01
Thu May 12 15:51:01 UTC 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
56aa4d8
Thu May 12 15:52:04 UTC 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
a9e97b1
Thu May 12 15:52:17 UTC 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|3
total_score: 35/70
1d415ce
Thu May 12 15:53:25 UTC 2022: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  5|3
total_score: 35/70
5b5625a
Thu May 12 15:59:59 UTC 2022: 
 sudoku.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
7c6dd94
Thu May 12 16:04:10 UTC 2022: 
 sudoku.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
bcffb33
Thu May 12 16:05:11 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
3a3b596
Thu May 12 17:02:17 HSP 2022: 
 tests:  7|1
total_score: 55/70
bd19518
Thu May 12 17:21:56 HSP 2022: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:130:9: error: implicit declaration of function 'size' [-Werror=implicit-function-declaration]
   while(size(pila)>0){
         ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d4412e1
Thu May 12 17:25:01 HSP 2022: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
3eec570
Thu May 12 17:26:18 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d7ef866
Thu May 12 17:26:38 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d521242
Thu May 12 17:28:19 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fa7ffcb
Thu May 12 17:28:57 HSP 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
5e0b677
Thu May 12 17:29:51 HSP 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 55/70
b63773d
Thu May 12 17:31:09 HSP 2022: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
f985e80
Thu May 12 17:31:49 HSP 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
cbca65a
